--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
-body
-{
+body {
     background-image: url('../media/background_image1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    margin:0;
+    margin: 0;
 }
 
-header{
+header {
     padding: 0 10px;
 }
 
@@ -15,54 +14,68 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-  }
-  
-  li {
-    float: right;
-  }
+}
 
-  li:hover {
-    
-  }
-  
-  li a {
+li {
+    float: right;
+}
+
+li:hover {
+
+}
+
+li a {
     font-size: 22px;
     display: block;
     color: white;
     text-align: center;
     padding: 16px;
     text-decoration: none;
-  }
-  
-  li a:hover {
+}
+
+li a:hover {
     transition-duration: .5s;
     font-weight: 600;
-    border-bottom: 1px solid white; 
-  }
-footer
-{
-    display:flex;
+    border-bottom: 1px solid white;
+}
+
+footer {
+    display: flex;
     position: absolute;
     bottom: 0;
     width: 100%;
-    text-align: center; 
+    text-align: center;
     height: auto;
     background-color: black;
-    color:white;
-    font-size:16px;
+    color: white;
+    font-size: 16px;
 }
 
-.footer-item-container{
-    width:25%;
-    text-align:left;
+.footer-item-container {
+    width: 25%;
+    text-align: left;
 }
 
-.contact-name-item{
-    font-weight:500;
+.contact-name-item {
+    font-weight: 500;
+}
+.content{
+    width: 100%;
 }
 
+#content-header-info {
+    font-size: 36px;
+    color: darkviolet;
+    font-weight: 900;
+    margin-top: 100px;
+    text-align: center;
+}
 
-#main-info{
-
+#content-info{
+    font-size: 36px;
+    color: blueviolet;
+    font-weight: 900;
+    margin-top: 70px;
+    text-align: center;
 }
   
