--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../media/background_image1.jpg');
+    background-image: url('../media/main_background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0;
