--- a/css/content-pages.css
+++ b/css/content-pages.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color:#f7fcf7;
+
 }
 
 header {
@@ -18,6 +18,7 @@ ul {
 }
 
 li {
+	font-size: 18px;
   float: right;
   display: flex;
   align-items: center;
@@ -38,16 +39,19 @@ li a:hover {
   border-bottom: 1px solid white;
 }
 
-
 footer {
-  display: flex;
-  width: 100%;
-  text-align: center;
-  height: auto;
-  background-color: #232b23;
-  color: white;
-  font-size: 16px;
-}
+		display: block;
+		position: absolute;
+		margin: auto;
+		margin-left: 10px;
+		bottom: 0;
+		width: 100%;
+		text-align: center;
+		height: 20%;;
+		color: white;
+		font-size: 16px;
+  }
+
 
 .footer-item-container {
   width: 25%;
