--- a/css/content-pages.css
+++ b/css/content-pages.css
@@ -1,6 +1,11 @@
-body {
-  margin: 0;
+html {
+	height: 100%;
+}
 
+body {
+	min-height: 100%;
+	margin: 0;
+   padding: 0;
 }
 
 header {
@@ -48,12 +53,12 @@ li a:hover {
 footer {
 		display: block;
 		position: absolute;
+		bottom: 0;
 		margin: auto;
 		margin-left: 10px;
-		bottom: 0;
 		width: 100%;
 		text-align: center;
-		height: 20%;;
+		height: 20%;
 		color: white;
 		font-size: 16px;
   }
@@ -86,6 +91,7 @@ footer {
   width: 100%;
 }
 
+
 #content-header-info {
   font-size: 36px;
   color: darkviolet;
@@ -115,25 +121,24 @@ footer {
 
 .team-member{
   width: 50%;
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius:5px;
-  height: 200px;
+  height: 250px;
   margin: 10px;
 }
 
-.team-member-photo{
+.team-member-photo {
   width: 35%;
   border-right: 1px solid black;
-  border-radius: 5px;
+  border-radius: 6px;
   float: left;
-  height: 100%;
+  height: 80%;
 }
 
-.team-member-info{
-  text-align: justify;
+.team-member-info {
+  text-align:justify;
   padding: 5px;
   float: right;
   width: 63%;
 }
-
 
