--- a/css/content-pages.css
+++ b/css/content-pages.css
@@ -72,7 +72,7 @@ footer {
 .contact-name-item {
   font-weight: 500;
 }
-.content-container{
+.content-container {
   width: 100%;
   text-align: center;
   color: white;
@@ -80,14 +80,14 @@ footer {
   min-height: 450px;
 }
 
-.content{
+.content {
   width: 80%;
   margin-left:10%;
 }
-.content-header{
+.content-header {
   width: 100%;
 }
-.content-body{
+.content-body {
   width: 100%;
 }
 
@@ -100,7 +100,7 @@ footer {
   text-align: center;
 }
 
-#content-info{
+#content-info {
   font-size: 36px;
   color: blueviolet;
   font-weight: 900;
@@ -109,17 +109,17 @@ footer {
 }
 
 
-.shortcut-item{
+.shortcut-item {
   text-decoration: none;
   color: white;
 }
 
 
-.team-member-row{
+.team-member-row {
   display: flex;
 }
 
-.team-member{
+.team-member {
   width: 50%;
   border: 2px solid black;
   border-radius:5px;
@@ -142,3 +142,17 @@ footer {
   width: 63%;
 }
 
+img {
+	max-width: 100%;
+	max-height: 100%;
+	border:3px solid black;
+
+}
+
+.hour-code-img {
+	display: flex;
+	flex-direction: row;	
+	margin-left: 200px;
+	height: 300px;
+	width: 350px;
+}
